tests/expectations/compiler/integers/u32/min_fail.out
Error [ETYC0372008]: The value -1 is not a valid `u32`
    --> compiler-test:4:18
     |
   4 |     let a: u32 = -1u32;
     |                  ^^^^^
Error [ETYC0372083]: A program must have at least one entry point fn.
    --> compiler-test:2:9
     |
   2 | program test.aleo { }
     |         ^^^^^^^^^
